# 2D-Interface-Builder

./: CMakeLists.txt  LICENSE  README.md  requirements.txt  setup.py  setup.py.b2e59e65e92cc2342fa1bfd29639e960.py
docs/: algorithm.md  building_interfaces.md  conf.py  index.rst  interfacebuilder.rst  intro.md  modules.rst  sphinx.txt
interfacebuilder/: __init__.py  legacy_python_backend.py  main.py  misc.py  plotting.py  structure.py
interfacebuilder/backend/: backend.cpp  backend.h  logging.cpp  logging.h  main.cpp  pybindings.cpp
tests/: test_main.py
